tests/fixtures/negative/on_interrupt_rejected.wrela
// expect: SEM0042: executor on interrupt handlers are no longer supported; use path-owned interrupt topics
module negative.on_interrupt_rejected

data Event { vector: U8 }

driver path P {
    interrupt receiver -> Event {
        return Event(vector = 1)
    }
}

executor E {
    p: P

    on p.interrupt(interrupt_payload: Event) {}
}
